libstdc++-v3/testsuite/testsuite_character.h
@@ -72,13 +72,15 @@ namespace __gnu_test
   typedef character<unsigned char, unsigned int, pod_state>  	pod_uchar;
   typedef character<unsigned short, unsigned int>	   	pod_ushort;
   typedef character<unsigned int, unsigned long>	   	pod_uint;  
+}
 
+namespace __gnu_cxx {
   // Specializations.
   // pod_char
   template<>
     template<typename V2>
-      inline pod_char::char_type
-      pod_char::char_type::from(const V2& v)
+      inline __gnu_test::pod_char::char_type
+      __gnu_test::pod_char::char_type::from(const V2& v)
       {
 	char_type ret = { static_cast<value_type>(v.value) };
 	return ret;
@@ -87,17 +89,16 @@ namespace __gnu_test
   template<>
     template<typename V2>
       inline V2
-      pod_char::char_type::to(const char_type& c)
+      __gnu_test::pod_char::char_type::to(const char_type& c)
       {
 	V2 ret = { c.value };
 	return ret;
       }
   
-  // pod_uchar
   template<>
     template<typename V2>
-      inline pod_uchar::char_type
-      pod_uchar::char_type::from(const V2& v)
+      inline __gnu_test::pod_uchar::char_type
+      __gnu_test::pod_uchar::char_type::from(const V2& v)
       {
 	char_type ret;
 	ret.value = (v >> 5);
@@ -107,7 +108,7 @@ namespace __gnu_test
   template<>
     template<typename V2>
       inline V2
-      pod_uchar::char_type::to(const char_type& c)
+      __gnu_test::pod_uchar::char_type::to(const char_type& c)
       { return static_cast<V2>(c.value << 5); }
 }; // namespace __gnu_test
 
